--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "express-async-handler": "^1.2.0"
   }
 }
